crates/facet_generate/src/reflection/snapshots/facet_generate__reflection__opaque_proxy_combinations__enum_struct_variant_hash_map_and_option_box_transparent.snap
---
source: crates/facet_generate/src/reflection/opaque_proxy_combinations.rs
expression: "reflect!(Event, UserId).unwrap()"
---
? namespace: ROOT
  name: Event
: ENUM:
    - 0:
        Data:
          - STRUCT:
              - users:
                  - MAP:
                      KEY: STR
                      VALUE:
                        TYPENAME:
                          namespace: ROOT
                          name: UserId
                  - []
              - backup:
                  - OPTION:
                      TYPENAME:
                        namespace: ROOT
                        name: UserId
                  - []
          - []
    - EXTERNAL
    - []
? namespace: ROOT
  name: UserId
: NEWTYPESTRUCT:
    - STR
    - - "Domain ID with `Facet`. Wire anchor for typegen."
