crates/facet_generate/src/reflection/snapshots/facet_generate__reflection__opaque_proxy_combinations__enum_struct_variant_rust_tuple_and_nested_transparent_opaque_proxy.snap
---
source: crates/facet_generate/src/reflection/opaque_proxy_combinations.rs
expression: "reflect!(Event, UserId).unwrap()"
---
? namespace: ROOT
  name: Event
: ENUM:
    - 0:
        Data:
          - STRUCT:
              - meta:
                  - TUPLE:
                      - U32
                      - OPTION: U32
                  - []
              - wrapper:
                  - TYPENAME:
                      namespace: ROOT
                      name: UserId
                  - []
          - []
    - EXTERNAL
    - []
? namespace: ROOT
  name: UserId
: NEWTYPESTRUCT:
    - STR
    - - "Domain ID with `Facet`. Wire anchor for typegen."
